--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.prototype">
-<uses-permission android:name="android.permission.INTERNET"></uses-permission>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -29,8 +31,6 @@
                 android:value="com.example.prototype.MainActivity" />
             >
         </activity>
-
-
         <activity
             android:name=".NewRequest"
             android:label="Back"
@@ -49,15 +49,59 @@
             android:name="android.support.PARENT_ACTIVITY"
             android:value="com.example.prototype.AcademicAdvisorPortal" />
         >
-        <activity android:name=".StudentPortal"
+        <activity android:name=".AcademicRequest"></activity>
+
+
+        <!-- Add Request -->
+        <activity
+            android:name=".AddRequest"
             android:label="Back"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName="com.example.prototype.StudentPortal">
 
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.prototype.MainActivity" />
-            >></activity>
+                android:value="com.example.prototype.StudentPortal" />
+        </activity>
+
+        <!-- Delete Request -->
+        <activity
+            android:name=".DeleteRequest"
+            android:label="Back"
+            android:parentActivityName="com.example.prototype.StudentPortal">
+
+            <!-- Parent activity meta-data to support 4.0 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.prototype.StudentPortal" />
+        </activity>
+
+
+        <!-- Withdrawal Request -->
+        <activity
+            android:name=".WithdrawalRequest"
+            android:label="Back"
+            android:parentActivityName="com.example.prototype.StudentPortal">
+
+            <!-- Parent activity meta-data to support 4.0 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.prototype.StudentPortal" />
+        </activity>
+
+        <!-- Check Request -->
+        <activity
+            android:name=".CheckRequest"
+            android:label="Back"
+            android:parentActivityName="com.example.prototype.StudentPortal">
+
+            <!-- Parent activity meta-data to support 4.0 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.prototype.StudentPortal" />
+        </activity>
+
+
     </application>
 
 </manifest>
