Adjustments to UI/UX

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,8 +55,10 @@
             ></activity>
 
 
-        <activity android:name=".StudentPortal">
-
+        <activity
+            android:name=".StudentPortal"
+            android:label="Back"
+            android:parentActivityName=".MainActivity">>
 
             <!-- Add Request -->
             <activity
