--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,7 +60,11 @@
             android:label="Back"
             android:parentActivityName=".MainActivity">>
 
-
+            <!-- Parent activity meta-data to support 4.0 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.prototype.MainActivity" />
+            >
         </activity>
 
 
